--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
 <html>
-<body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<link rel="stylesheet" href="">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="spoj.js"></script>
+	<script type="text/javascript" src="uri.js"></script>
+</head>
+<body>
+	<section id="site">
+		<h1>Olá Mundo!</h1>
+	</section>
+	<script>
+		URI.ola();
+	</script>
 </body>
 </html>
