--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="spoj.js"></script>
-	<script type="text/javascript" src="uri.js"></script>
+	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/model/spoj.js"></script>
+	<script type="text/javascript" src="js/model/uri.js"></script>
 </head>
 <body>
 	<section id="site">
-		<h1>Olá Mundo!</h1>
+		<h1>Hello World !</h1>
 	</section>
-	<script>
-		URI.ola();
-	</script>
 </body>
 </html>
