--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/model/spoj.js"></script>
-	<script type="text/javascript" src="js/model/uri.js"></script>
+	<script type="text/javascript" src="js/model/urijudge.js"></script>
 </head>
 <body>
 	<section id="site">
