Doing some refactoring

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/model/spoj.js"></script>
-	<script type="text/javascript" src="js/model/urijudge.js"></script>
+	<script type="text/javascript" src="js/model/judges.js"></script>
 </head>
 <body>
 	<section id="site">
