--- a/hsQuiz/www/index.html
+++ b/hsQuiz/www/index.html
@@ -31,6 +31,8 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdn.rawgit.com/nnattawat/flip/v1.0.16/dist/jquery.flip.min.js"></script>
 
   </head>
   <body ng-app="starter">
